# ROS_OpenCV_THT_Aksantara

./: CMakeLists.txt  compile_commands.json  main.cpp  readme.md
.cache/clangd/index/: main.cpp.6FD2713C70871AFA.idx
